--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@media (max-width: 480px) {
+    .swiper-button-next,.swiper-button-prev {
+      display: none !important; 
+    }
+  }
